// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Subscription Details renders subscription details for BASIC PLAN 1`] = `
<div
  class="card card-root"
  data-testid="subscription-details"
>
  <div
    class="card-header py-2"
  >
    <div
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        SUBSCRIPTION DETAILS
      </span>
    </div>
  </div>
  <hr
    class="m-0"
  />
  <div
    class="card-body"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-3 font-weight-semi-bold"
      >
        Basic
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        1,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        300,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Workspace Users
      </span>
      <span
        class="text-3 text-secondary"
      >
        Unlimited
      </span>
    </div>
  </div>
</div>
`;

exports[`Subscription Details renders subscription details for BUSINESS PLAN 1`] = `
<div
  class="card card-root"
  data-testid="subscription-details"
>
  <div
    class="card-header py-2"
  >
    <div
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        SUBSCRIPTION DETAILS
      </span>
    </div>
  </div>
  <hr
    class="m-0"
  />
  <div
    class="card-body pb-0"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-3 font-weight-semi-bold"
      >
        Business
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        10,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        5,000,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Workspace Users
      </span>
      <span
        class="text-3 text-secondary"
      >
        Unlimited
      </span>
    </div>
  </div>
  <div
    class="card-header pb-2"
  >
    <div
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        PURCHASED ADD-ONS
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <hr
      class="mt-0"
    />
    <div
      class="mb-2"
    >
      <span
        class="text-3 text-secondary"
      >
        Tailor limits to business needs. Incrementally increase individual or page view limits as needed without committing to a new plan.
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        10,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        5,000,000
      </span>
    </div>
  </div>
</div>
`;

exports[`Subscription Details renders subscription details for ENTERPRISE PLAN 1`] = `
<div
  class="card card-root"
  data-testid="subscription-details"
>
  <div
    class="card-header py-2"
  >
    <div
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        SUBSCRIPTION DETAILS
      </span>
    </div>
  </div>
  <hr
    class="m-0"
  />
  <div
    class="card-body pb-0"
  >
    <div
      class="mb-2"
    >
      <span
        class="text-3 font-weight-semi-bold"
      >
        Enterprise
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        100,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        60,000,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Workspace Users
      </span>
      <span
        class="text-3 text-secondary"
      >
        Unlimited
      </span>
    </div>
  </div>
  <div
    class="card-header pb-2"
  >
    <div
      class="card-title"
    >
      <span
        class="text-3 text-secondary"
      >
        PURCHASED ADD-ONS
      </span>
    </div>
  </div>
  <div
    class="card-body"
  >
    <hr
      class="mt-0"
    />
    <div
      class="mb-2"
    >
      <span
        class="text-3 text-secondary"
      >
        Tailor limits to business needs. Incrementally increase individual or page view limits as needed without committing to a new plan.
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Individuals
      </span>
      <span
        class="text-3 text-secondary"
      >
        10,000
      </span>
    </div>
    <div
      class="d-flex justify-content-between mb-1"
    >
      <span
        class="text-3 text-secondary font-weight-semi-bold"
      >
        Page Views
      </span>
      <span
        class="text-3 text-secondary"
      >
        5,000,000
      </span>
    </div>
  </div>
</div>
`;

exports[`UsageOverview should render 1`] = `
<div>
  <div
    class="settings-base-page-root"
  >
    <div
      class="maintenance-alert-root"
    />
    <div
      class="content-header has-page-actions"
    >
      <div
        class="header-text"
      >
        <div
          class="d-flex"
        >
          <h3
            class="title-text text-truncate"
          >
            <span
              class="text-truncate"
              data-tooltip="false"
              title=""
            >
              Subscription & Usage
            </span>
          </h3>
        </div>
        <div
          class="description"
        >
          Plans are limited by the total amount of individuals and page views.
        </div>
      </div>
      <div
        class="page-actions-container"
      >
        <a
          class="button-root btn btn-primary"
          href="https://support.liferay.com/"
          rel="noreferrer noopener"
          target="_blank"
        >
          <svg
            class="lexicon-icon lexicon-icon-shortcut mr-2"
            role="presentation"
          >
            <use
              href="#shortcut"
            />
          </svg>
          Go to Customer Portal
          <span
            class="sr-only"
          >
            (Opens a new window)
          </span>
        </a>
      </div>
    </div>
    <div>
      <div
        class="row"
      >
        <div
          class="col-xl-8"
        >
          <div
            class="card card-root"
          >
            <div
              class="card-header"
            >
              <div
                class="card-title"
              >
                Usage Limits
              </div>
            </div>
            <div
              class="card-body"
            >
              <p>
                <span
                  class="text-3 text-secondary"
                >
                  When either limit is exceeded, the current plan will either have to be upgraded or add-ons will have to be purchased to accommodate the overage.
                </span>
              </p>
              <p
                class="mb-0"
                data-testid="next-anniversary-date"
              >
                <span
                  class="text-3 text-secondary"
                >
                  Plan usage resets on 
                  <b>
                    Jul 08, 2019
                  </b>
                  .
                </span>
              </p>
              <div
                class="mt-4 mb-5"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  KNOWN INDIVIDUALS
                </span>
                <hr
                  class="my-2"
                />
                <span
                  class="text-3 text-secondary"
                >
                  Active users logged on your DXP instance have been tracked by Analytics Cloud since Jul 08, 2018.
                </span>
                <div
                  class="mt-3"
                >
                  <div
                    class="d-flex justify-content-between mb-1"
                  >
                    <span
                      class="text-3 text-secondary"
                    >
                      CURRENT USAGE
                    </span>
                    <span
                      class="text-3 text-secondary"
                    >
                      2,057 of 105,000 - 2% known individuals were used.
                    </span>
                  </div>
                  <div
                    class="recharts-responsive-container"
                    style="width: 100%; height: 24px; min-width: 0;"
                  />
                  <span
                    class="text-3 text-secondary"
                  >
                    102,943 known individuals are available.
                  </span>
                  <div
                    class="mt-4"
                  >
                    <div
                      class="mb-1"
                    >
                      <span
                        class="text-3 text-secondary"
                      >
                        INDIVIDUALS BREAKDOWN
                      </span>
                    </div>
                    <div
                      class="recharts-responsive-container"
                      style="width: 100%; height: 24px; min-width: 0;"
                    />
                  </div>
                </div>
              </div>
              <span
                class="text-3 text-secondary font-weight-semi-bold"
              >
                PAGE VIEWS
              </span>
              <hr
                class="my-2"
              />
              <span
                class="text-3 text-secondary"
              >
                Total page views have been tracked by Analytics Cloud since Jul 08, 2018.
              </span>
              <div
                class="mt-3"
              >
                <div
                  class="d-flex justify-content-between mb-1"
                >
                  <span
                    class="text-3 text-secondary"
                  >
                    CURRENT USAGE
                  </span>
                  <span
                    class="text-3 text-secondary"
                  >
                    100,023 of 7,000,000 - 1.4% page views were used.
                  </span>
                </div>
                <div
                  class="recharts-responsive-container"
                  style="width: 100%; height: 24px; min-width: 0;"
                />
                <span
                  class="text-3 text-secondary"
                >
                  6,899,977 page views are available.
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="col-xl-4"
        >
          <div
            class="card card-root"
            data-testid="subscription-details"
          >
            <div
              class="card-header py-2"
            >
              <div
                class="card-title"
              >
                <span
                  class="text-3 text-secondary"
                >
                  SUBSCRIPTION DETAILS
                </span>
              </div>
            </div>
            <hr
              class="m-0"
            />
            <div
              class="card-body pb-0"
            >
              <div
                class="mb-2"
              >
                <span
                  class="text-3 font-weight-semi-bold"
                >
                  Enterprise
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Individuals
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  100,000
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Page Views
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  60,000,000
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Workspace Users
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  Unlimited
                </span>
              </div>
            </div>
            <div
              class="card-header pb-2"
            >
              <div
                class="card-title"
              >
                <span
                  class="text-3 text-secondary"
                >
                  PURCHASED ADD-ONS
                </span>
              </div>
            </div>
            <div
              class="card-body"
            >
              <hr
                class="mt-0"
              />
              <div
                class="mb-2"
              >
                <span
                  class="text-3 text-secondary"
                >
                  Tailor limits to business needs. Incrementally increase individual or page view limits as needed without committing to a new plan.
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Individuals
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  10,000
                </span>
              </div>
              <div
                class="d-flex justify-content-between mb-1"
              >
                <span
                  class="text-3 text-secondary font-weight-semi-bold"
                >
                  Page Views
                </span>
                <span
                  class="text-3 text-secondary"
                >
                  5,000,000
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
